--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,12 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_KEYBOARD_NAME="bw-corne"
+
+CONFIG_ZMK_SLEEP=y
+# deep sleep: 30m to millis
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# enable stronger bt connection
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
