--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,4 +12,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # enable stronger bt connection
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# enable pointing device
+CONFIG_ZMK_POINTING=y
