--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,3 +16,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # enable pointing device
 CONFIG_ZMK_POINTING=y
+
+# Enable soft off functionality from the keymap or dedicated hardware
+CONFIG_ZMK_PM_SOFT_OFF=y
